--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ TestResult.xml
 [Rr]eleasePS/
 dlldata.c
 
+# Benchmark Results
+BenchmarkDotNet.Artifacts/
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
@@ -183,6 +186,7 @@ AppPackages/
 BundleArtifacts/
 Package.StoreAssociation.xml
 _pkginfo.txt
+*.appx
 
 # Visual Studio cache files
 # files ending in .cache can be ignored
@@ -263,10 +267,6 @@ paket-files/
 # FAKE - F# Make
 .fake/
 
-# JetBrains Rider
-.idea/
-*.sln.iml
-
 # CodeRush
 .cr/
 
@@ -278,6 +278,9 @@ __pycache__/
 # tools/**
 # !tools/packages.config
 
+# Tabs Studio
+*.tss
+
 # Telerik's JustMock configuration file
 *.jmconfig
 
@@ -286,8 +289,21 @@ __pycache__/
 *.btm.cs
 *.odx.cs
 *.xsd.cs
-/.vscode/launch.json
-/.vscode/tasks.json
 
-# local app settings
+# 'Local' config files
+ethereumconfiguration-local.json
+ethereumconfiguration-test-local.json
+ethereumconfiguration-integration-test-local.json
+appsettings-integration-test-local.json
 appsettings-local.json
+appsettings-test-local.json
+
+# DotCover files
+*.dcvr
+
+# Downloaded Content
+src/Content
+src/Data
+
+/.gtm/
+.config
