--- a/.github/workflows/pr-update.yml
+++ b/.github/workflows/pr-update.yml
@@ -11,8 +11,10 @@ on:
 jobs:
   info:
     if: ${{ endsWith(github.repository , '-template') }}
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux]
     steps:
+    - run: |
+        sudo chown -R $USER:$USER $GITHUB_WORKSPACE
     - run: |
         echo "Branch: ${{ github.head_ref }}"
         echo "Base Branch: ${{ github.base_ref }}"
@@ -26,18 +28,22 @@ jobs:
         echo "Actor: ${{ github.actor }}"
 
   add-pr-label:
-    if: github.event_name == 'pull_request' && ( github.event.action == 'opened' || github.event.action == 'reopened' || github.event.action == 'synchronize')
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux]
     steps:
+    - run: |
+        sudo chown -R $USER:$USER $GITHUB_WORKSPACE
     - uses: actions/labeler@v3
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        configuration-path: .github/labeler.yml
         sync-labels: true
 
   assign-to-creator:
     if: ${{ !github.event.pull_request.assignee.login && github.event_name == 'pull_request' && ( github.event.action == 'opened' || github.event.action == 'reopened')}}
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux]
     steps:
+    - run: |
+        sudo chown -R $USER:$USER $GITHUB_WORKSPACE
     - uses: thomaseizinger/assign-pr-creator-action@v1.0.0
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
