--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -17,10 +17,10 @@
         <IsPublishable>true</IsPublishable>
         <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(MSBuildProjectName).xml</DocumentationFile>
         <IsTransformWebConfigDisabled>true</IsTransformWebConfigDisabled>
-      <GenerateNeutralResourcesLanguageAttribute>true</GenerateNeutralResourcesLanguageAttribute>
-      <TieredCompilation>true</TieredCompilation>
-      <ImplicitUsings>disable</ImplicitUsings>
-      <ValidateExecutableReferencesMatchSelfContained>true</ValidateExecutableReferencesMatchSelfContained>
+        <GenerateNeutralResourcesLanguageAttribute>true</GenerateNeutralResourcesLanguageAttribute>
+        <TieredCompilation>true</TieredCompilation>
+        <ImplicitUsings>disable</ImplicitUsings>
+        <ValidateExecutableReferencesMatchSelfContained>true</ValidateExecutableReferencesMatchSelfContained>
     </PropertyGroup>
     <PropertyGroup>
         <AnalysisLevel>latest</AnalysisLevel>
@@ -30,6 +30,39 @@
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
         <CodeAnalysisRuleSet>$(SolutionDir)\CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
+    <ItemGroup>
+        <None Remove="appsettings-local.json" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Always</CopyToPublishDirectory>
+        </Content>
+        <Content Update="appsettings-local.json" Condition="Exists('appsettings-local.json')">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
+        </Content>
+    </ItemGroup>
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Copy SourceFiles="appsettings.json" DestinationFiles="$(OutDir)\appsettings.json" SkipUnchangedFiles="true" />
+        <Copy SourceFiles="appsettings-local.json" DestinationFiles="$(OutDir)\appsettings-local.json"
+              SkipUnchangedFiles="true" Condition="Exists('appsettings-local.json')" />
+    </Target>
+    <Target Name="PrePublish" BeforeTargets="PrepareForPublish">
+        <Copy SourceFiles="appsettings.json" DestinationFiles="$(PublishDir)\appsettings.json"
+              SkipUnchangedFiles="true" />
+    </Target>
+    <ItemGroup>
+        <TrimmerRootAssembly Include="System.Text.Json" />
+        <TrimmerRootAssembly Include="System.IO.MemoryMappedFiles" />
+        <TrimmerRootAssembly Include="System.Resources.Writer" />
+        <TrimmerRootAssembly Include="System.Threading.ThreadPool" />
+        <TrimmerRootAssembly Include="System.Transactions" />
+        <TrimmerRootAssembly Include="System.Diagnostics.FileVersionInfo" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
+    </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
@@ -46,36 +79,5 @@
         <PackageReference Include="SonarAnalyzer.CSharp" Version="8.32.0.39516" PrivateAssets="All" />
         <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All" />
         <PackageReference Include="ToStringWithoutOverrideAnalyzer" Version="0.6.0" PrivateAssets="All" />
-    </ItemGroup>
-    <ItemGroup>
-        <ProjectReference Include="..\CoinBot.Discord\CoinBot.Discord.csproj" />
-    </ItemGroup>
-    <ItemGroup>
-        <None Remove="appsettings-local.json" />
-    </ItemGroup>
-    <ItemGroup>
-        <Content Update="appsettings.json">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-            <CopyToPublishDirectory>Always</CopyToPublishDirectory>
-        </Content>
-        <Content Update="appsettings-local.json" Condition="Exists('appsettings-local.json')">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-            <CopyToPublishDirectory>Never</CopyToPublishDirectory>
-        </Content>
-    </ItemGroup>
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Copy SourceFiles="appsettings.json" DestinationFiles="$(OutDir)\appsettings.json" SkipUnchangedFiles="true" />
-        <Copy SourceFiles="appsettings-local.json" DestinationFiles="$(OutDir)\appsettings-local.json" SkipUnchangedFiles="true" Condition="Exists('appsettings-local.json')" />
-    </Target>
-    <Target Name="PrePublish" BeforeTargets="PrepareForPublish">
-        <Copy SourceFiles="appsettings.json" DestinationFiles="$(PublishDir)\appsettings.json" SkipUnchangedFiles="true" />
-    </Target>
-    <ItemGroup>
-        <TrimmerRootAssembly Include="System.Text.Json" />
-        <TrimmerRootAssembly Include="System.IO.MemoryMappedFiles" />
-        <TrimmerRootAssembly Include="System.Resources.Writer" />
-        <TrimmerRootAssembly Include="System.Threading.ThreadPool" />
-        <TrimmerRootAssembly Include="System.Transactions" />
-        <TrimmerRootAssembly Include="System.Diagnostics.FileVersionInfo" />
     </ItemGroup>
 </Project>
