--- a/src/CoinBot/CoinBot.csproj
+++ b/src/CoinBot/CoinBot.csproj
@@ -45,12 +45,10 @@
     </ItemGroup>
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
         <Copy SourceFiles="appsettings.json" DestinationFiles="$(OutDir)\appsettings.json" SkipUnchangedFiles="true" />
-        <Copy SourceFiles="appsettings-local.json" DestinationFiles="$(OutDir)\appsettings-local.json"
-              SkipUnchangedFiles="true" Condition="Exists('appsettings-local.json')" />
+        <Copy SourceFiles="appsettings-local.json" DestinationFiles="$(OutDir)\appsettings-local.json" SkipUnchangedFiles="true" Condition="Exists('appsettings-local.json')" />
     </Target>
     <Target Name="PrePublish" BeforeTargets="PrepareForPublish">
-        <Copy SourceFiles="appsettings.json" DestinationFiles="$(PublishDir)\appsettings.json"
-              SkipUnchangedFiles="true" />
+        <Copy SourceFiles="appsettings.json" DestinationFiles="$(PublishDir)\appsettings.json" SkipUnchangedFiles="true" />
     </Target>
     <ItemGroup>
         <TrimmerRootAssembly Include="System.Text.Json" />
@@ -75,7 +73,7 @@
         <PackageReference Include="Discord.Net.Analyzers" Version="2.4.0" PrivateAssets="All" />
         <PackageReference Include="FunFair.CodeAnalysis" Version="5.7.0.995" PrivateAssets="All" />
         <PackageReference Include="Microsoft.VisualStudio.Threading.Analyzers" Version="17.0.64" PrivateAssets="All" />
-        <PackageReference Include="Roslynator.Analyzers" Version="3.2.2" PrivateAssets="All" />
+        <PackageReference Include="Roslynator.Analyzers" Version="3.3.0" PrivateAssets="All" />
         <PackageReference Include="SonarAnalyzer.CSharp" Version="8.32.0.39516" PrivateAssets="All" />
         <PackageReference Include="SourceLink.Create.CommandLine" Version="2.8.3" PrivateAssets="All" />
         <PackageReference Include="ToStringWithoutOverrideAnalyzer" Version="0.6.0" PrivateAssets="All" />
